@@ -1,3 +1,7 @@
+2014-05-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* fread.c (copy_multibyte_char): Avoid ambiguous operation.
+
 2014-05-13  TANAKA Takuji  <KXD02663@nifty.ne.jp>
 
 	* fread.c: Add copy_multibyte_char() to
